- Удалить избыточные комментарии в HashtagServiceImpl - Заменить List.of() на Collections.emptyList() - Использовать derived query methods вместо @Query - Переместить создание Pageable из контроллера в сервис - Обновить тесты и добавить JavaDoc"